--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,14 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.codehaus.groovy:groovy-all:2.5.17'
+    implementation 'org.codehaus.groovy:groovy-all:2.4.21'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
     // HttpBuilder
     implementation 'io.github.http-builder-ng:http-builder-ng-core:1.0.4'
 
-    // https://mvnrepository.com/artifact/org.jsoup/jsoup
+    // Jsoup
     implementation 'org.jsoup:jsoup:1.15.3'
 }
 
